update translation files for traditional Chinese

--- a/Timer-Weather/Timer-Weather/zh-Hant.lproj/Main.strings
+++ b/Timer-Weather/Timer-Weather/zh-Hant.lproj/Main.strings
@@ -24,22 +24,22 @@
 "UbC-le-fKU.text" = "保持屏幕常亮";
 
 /* Class = "UILabel"; text = "Show date"; ObjectID = "YGQ-HY-Jjp"; */
-"YGQ-HY-Jjp.text" = "显示日期";
+"YGQ-HY-Jjp.text" = "顯示日期";
 
 /* Class = "UILabel"; text = "Show 5 days weather"; ObjectID = "cq2-Wl-rEw"; */
-"cq2-Wl-rEw.text" = "显示5天天气";
+"cq2-Wl-rEw.text" = "顯示5天天氣";
 
 /* Class = "UILabel"; text = "Show location"; ObjectID = "dfq-Bl-moD"; */
-"dfq-Bl-moD.text" = "显示地理位置";
+"dfq-Bl-moD.text" = "顯示地理位置";
 
 /* Class = "UINavigationItem"; title = "Settings"; ObjectID = "e76-5k-rtX"; */
-"e76-5k-rtX.title" = "设置";
+"e76-5k-rtX.title" = "設置";
 
 /* Class = "UILabel"; text = "Date format"; ObjectID = "f9v-6Z-Bvw"; */
 "f9v-6Z-Bvw.text" = "日期格式";
 
 /* Class = "UILabel"; text = "Watch face"; ObjectID = "fFw-Sb-Wo5"; */
-"fFw-Sb-Wo5.text" = "表盘格式";
+"fFw-Sb-Wo5.text" = "表盤格式";
 
 /* Class = "UIButton"; accessibilityLabel = "Share"; ObjectID = "fe7-Tq-fSp"; */
 "fe7-Tq-fSp.accessibilityLabel" = "Share";
@@ -48,13 +48,13 @@
 "feB-Tt-kv4.text" = "Sydney";
 
 /* Class = "UILabel"; text = "Show weather"; ObjectID = "jEE-yH-fvw"; */
-"jEE-yH-fvw.text" = "显示天气";
+"jEE-yH-fvw.text" = "顯示天氣";
 
 /* Class = "UINavigationItem"; title = "Date fromat"; ObjectID = "qQB-Ii-KTk"; */
 "qQB-Ii-KTk.title" = "日期格式";
 
 /* Class = "UIBarButtonItem"; title = "Setting"; ObjectID = "uAM-B2-uSP"; */
-"uAM-B2-uSP.title" = "设置";
+"uAM-B2-uSP.title" = "設置";
 
 /* Class = "UILabel"; text = "-℃"; ObjectID = "v0i-bl-bb4"; */
 "v0i-bl-bb4.text" = "-℃";
@@ -66,4 +66,4 @@
 "w0q-le-DDn.text" = "Made with ♥, in Sydney, Australia";
 
 /* Class = "UILabel"; text = "Background Color"; ObjectID = "wDG-ci-rfw"; */
-"wDG-ci-rfw.text" = "背景颜色";
+"wDG-ci-rfw.text" = "背景顏色";
