--- a/Timer-Weather/Timer-Weather/zh-Hant.lproj/Localizable.strings
+++ b/Timer-Weather/Timer-Weather/zh-Hant.lproj/Localizable.strings
@@ -1,12 +1,13 @@
-/* 
-  Localizable.strings
-  Timer-Weather
+/*
+ Localizable.strings
+ Timer-Weather
+ 
+ Created by JINGLUO on 20/5/18.
+ Copyright © 2018 JINGLUO. All rights reserved.
+ */
 
-  Created by JINGLUO on 20/5/18.
-  Copyright © 2018 JINGLUO. All rights reserved.
-*/
 
 
 "Date Format" = "日期格式";
-"Watch Face" = "表盘格式";
-"Background Color" = "背景颜色";
+"Watch Face" = "表盤格式";
+"Background Color" = "背景顏色";
